# my-todo-app

./: .gitignore  Makefile.am  README.md  configure.ac
backend/: pom.xml
backend/src/main/java/com/thuanbui/todoapp/: LoadDatabase.java  TodoApplication.java
backend/src/main/java/com/thuanbui/todoapp/controller/: ApiResponse.java  GlobalExceptionHandler.java  TodoItemController.java  UsersController.java
backend/src/main/java/com/thuanbui/todoapp/dto/: CreateUserRequestDTO.java  TodoDTO.java  UserDTO.java
backend/src/main/java/com/thuanbui/todoapp/enums/: TodoStatus.java
backend/src/main/java/com/thuanbui/todoapp/exceptions/: UserExistsException.java
backend/src/main/java/com/thuanbui/todoapp/model/: TodoItem.java  User.java
backend/src/main/java/com/thuanbui/todoapp/repository/: TodoItemRepository.java  UserRepository.java
backend/src/main/java/com/thuanbui/todoapp/services/: UserService.java
backend/src/main/resources/: application-dev.properties  application-prod.properties  application-test.properties
backend/src/main/resources/db/migration/: V1__create_todo_table.sql  V1__create_users_table.sql  V2__add_due_date_column.sql  V2__create_todos_table.sql  V3__create_jwt_tokens_table.sql  V3__create_user_table.sql  V4__add_todo_foreign_key.sql  V4__create_triggers.sql
backend/src/test/java/com/thuanbui/todoapp/controller/: TodoControllerTest.java  TodoItemControllerTest.java  UsersControllerTest.java
backend/src/test/java/com/thuanbui/todoapp/model/: UserTest.java
backend/src/test/java/com/thuanbui/todoapp/services/: UserServiceTest.java
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  App.scss  index.js
frontend/src/components/: PrivateRoute.jsx  SearchBox.jsx  TodoEditModal.jsx  TodoEditModal.scss  TodoItem.jsx  TodoItem.scss  TodoList.jsx  TodoList.test.js
frontend/src/layout/: MainLayout.jsx
frontend/src/pages/: LoginPage.jsx  LoginPage.scss  TodosPage.jsx
frontend/src/redux/: authSlice.js  store.js  todoSlice.js
frontend/src/sections/common/: Navbar.jsx  Topbar.jsx
frontend/src/sections/todo/: TodoEditModal.jsx  TodoItem.jsx  TodoList.jsx  TodoList.scss
frontend/src/services/: api.js
